# stm32f4_template

./: .gitignore
lib/: delete_me.txt
makefiles/: toolchain_arm.mk  toolchain_pc.mk
src/: CMakeLists.txt  Toolchain-arm-gcc.cmake  build.mk  compiler_flags.cmake  conf.mk  cppcheck.cmake  cppcheck_platform_arm.xml  linker.ld  main.c
src/hw/core_init/: core_init.c  core_init.h
src/hw/gpio_f4/: gpio_f4.c  gpio_f4.h
src/utils/: platform_specific.h
test/hw_test/: build.mk
test/hw_test/template/: conf.mk
test/unit_test/: Makefile  build.mk
test/unit_test/common/: platform_specific.h
test/unit_test/template/: conf.mk  template_main.c  template_runner.c  template_test.c
test/unit_test/unity/: build.mk
